tests/errors/preprocessor/non_existing_include.ne
include "ariasojhdasjkhdaskjhjasdk"

function main(): int32
{
    
}
